# AML-DynamicPredictor

./: pyproject.toml
Figure3_comparison_density_distribution/: Evaluation_measures.py
Figure4_Bsum/: Bsum_classification.py
Figure6_feature_importance/: tabnet_best_params.py
Figure7_violin/: character_difference.R
Figure8_survival/: survival_time.py
FigureS2_ODE_fitting/: HGB_parameter_fitting.py  NEUT_parameter_fitting.py  PLT_parameter_fitting.py  WBC_parameter_fitting.py
FigureS3_nrmse/: draw_nrmse_distribution.py  generate_error_HGB.py  generate_error_NEUT.py  generate_error_PLT.py  generate_error_WBC.py
FigureS4_scatter/: significant_correlations.py
FigureS5_heatmap/: correlation_matrix_Model_parameters_and_clinical_features.py
FigureS6_tSNE/: Multivar_test.py
FigureS7_feature_distribution/: Evaluation_measures_together.py
data/: 4to2cluster_bsum_classification_results.csv  AML_allnew_merged_patient_data_processed.xlsx  OriginalData2_blood_data_filtered.csv  combined_Blood_routine_data.csv  combined_drug_dosage_plan.csv  data1_added_blood.xlsx  data1_added_drug.xlsx  data2_added_blood.xlsx  data2_added_drug.xlsx  data3_survival_data.xlsx  feature_importances_900_nd8_na32_g11_cd3_bs48_lr0006538.npy  feature_order_1000.json  feature_order_700.json  feature_order_800.json  feature_order_900.json  nodata2_2cluster_data.xlsx  nodata2_2cluster_simulated_training_patient_set_1000.xlsx  nodata2_2cluster_simulated_training_patient_set_500.xlsx  nodata2_2cluster_simulated_training_patient_set_600.xlsx  nodata2_2cluster_training_set.xlsx  (+25 more)
